--- a/package.json
+++ b/package.json
@@ -1,45 +1,51 @@
 {
-  "name": "thebookalley",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
-  },
-  "dependencies": {
-    "material-design-icons-iconfont": "^3.0.3",
-    "register-service-worker": "^1.5.2",
-    "roboto-fontface": "*",
-    "vue": "^2.6.6",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.3.0",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-plugin-unit-jest": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "axios": "^0.18.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "fibers": "^3.1.1",
-    "sass": "^1.16.0",
-    "sass-loader": "^7.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-axios": "^0.0.4",
-    "vue-cli-plugin-vuetify": "^0.4.6",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
-  }
+    "name": "thebookalley",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint",
+        "test:e2e": "vue-cli-service test:e2e",
+        "test:unit": "vue-cli-service test:unit"
+    },
+    "dependencies": {
+        "material-design-icons-iconfont": "^3.0.3",
+        "pouchdb": "^7.0.0",
+        "register-service-worker": "^1.5.2",
+        "roboto-fontface": "*",
+        "vue": "^2.6.6",
+        "vue-router": "^3.0.1",
+        "vuetify": "^1.3.0",
+        "vuex": "^3.0.1"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.4.0",
+        "@vue/cli-plugin-e2e-nightwatch": "^3.4.0",
+        "@vue/cli-plugin-eslint": "^3.4.0",
+        "@vue/cli-plugin-pwa": "^3.4.0",
+        "@vue/cli-plugin-unit-jest": "^3.4.0",
+        "@vue/cli-service": "^3.4.0",
+        "@vue/test-utils": "^1.0.0-beta.20",
+        "axios": "^0.18.0",
+        "babel-core": "7.0.0-bridge.0",
+        "babel-eslint": "^10.0.1",
+        "babel-jest": "^23.6.0",
+        "eslint": "^5.8.0",
+        "eslint-plugin-vue": "^5.0.0",
+        "fibers": "^3.1.1",
+        "pouchdb-authentication": "^1.1.3",
+        "pouchdb-browser": "^7.0.0",
+        "pouchdb-find": "^7.0.0",
+        "pouchdb-live-find": "^0.4.0",
+        "sass": "^1.16.0",
+        "sass-loader": "^7.1.0",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.1",
+        "vue-cli-plugin-axios": "^0.0.4",
+        "vue-cli-plugin-vuetify": "^0.4.6",
+        "vue-pouch": "^0.0.23",
+        "vue-template-compiler": "^2.5.21",
+        "vuetify-loader": "^1.0.5"
+    }
 }
